<resources>
    <string name="app_name">lab2</string>

    <string name="disney_name">Name</string>
    <string-array name="disney_names_arr">
        <item>Мауи</item>
        <item>Ариэль</item>
        <item>Эльза</item>
        <item>Рапунцель</item>
        <item>Урсула</item>
        <item>Дарт Вейдер</item>
        <item>Базз Лайтер</item>
        <item>R2-D2</item>
        <item>Шериф Вуди</item>
        <item>Хан Соло</item>
    </string-array>

<!--    DESCRIPTION-->
    <string name="film">Film</string>
    <string-array name="films">
        <item>Фильмы: Моана</item>
        <item>Фильмы: Русалочка (1989), Русалочка 2: Возвращение в море, Русалочка: Начало истории Ариэль, Каникулы Гуфи (камео), Волшебное Рождество у Микки: В занесённом снегами Мышином доме, Дом злодеев. Мышиный дом, Возвращение Джафара (камео), Аладдин и король разбойников (камео), Рапунцель: Запутанная История (камео), Ральф против интернета, Русалочка (фильм) (предстоящий)</item>
        <item>Фильмы: Холодное сердце, Холодное сердце 2, Ральф против интернета</item>
        <item>Фильмы: Рапунцель: Запутанная история, Холодное сердце (камео), Рапунцель: Дорога к мечте, Ральф против интернета</item>
        <item>Фильмы: Русалочка, Русалочка 2: Возвращение в море (камео; упоминается), Волшебное Рождество у Микки: В занесённом снегами Мышином доме, Мышиный дом. Дом злодеев, Наследники 2</item>
        <item>Фильмы: Звёздные войны: Месть Ситхов, Изгой-один: Звёздные войны Истории, Звёздные войны: Новая надежда, Звёздные войны: Империя наносит ответный удар, Звёздные войны: Возвращение джедая</item>
        <item>Фильмы: История игрушек, История игрушек 2, В поисках Немо (камео), Тачки (камео), Сказки на ночь (камео), История игрушек 3, История игрушек 4, Ральф против интернета (камео), Базз Лайтер</item>
        <item>Фильмы: Звёздные войны: Скрытая угроза, Звёздные войны: Атака клонов, Звёздные войны: Месть ситхов, Звёздные войны: Новая надежда, Звёздные войны: Империя наносит ответный удар, Звёздные войны: Возвращение джедая, Звёздные войны: Пробуждение силы, Изгой один, Звёздные войны: Последний джедай</item>
        <item>Фильмы: История игрушек, История игрушек 2, В поисках Немо (камео), Тачки (камео), Сказки на ночь (камео), История игрушек 3, История игрушек 4, Ральф против интернета (камео).</item>
        <item>Фильмы: Хан Соло: Звёздные войны. Истории, Звёздные войны. Эпизод IV: Новая надежда, Звёздные войны. Эпизод V: Империя наносит ответный удар, Звёздные войны. Эпизод VI: Возвращение джедая, Звёздные войны. Эпизод VII: Пробуждение силы</item>
    </string-array>

    <string name="short_film">Short Film</string>
    <string-array name="short_films">
        <item>Короткометражки: Рыба мечты</item>
        <item>Короткометражки: *отсутствуют*</item>
        <item>Короткометражки: Холодное торжество, The Art of Keeping Cool (камео), Олаф и холодное приключение</item>
        <item>Короткометражки: Рапунцель: Счастлива навсегда, Chibi Tiny Tales</item>
        <item>Короткометражки: *отсутствуют*</item>
        <item>Короткометражки: *отсутствуют*</item>
        <item>Короткометражки: Гавайские каникулы, Самозаванец, Веселозавр Рекс, История игрушек и ужасов!, История игрушек, забытая временем</item>
        <item>Короткометражки: *отсутствуют*</item>
        <item>Короткометражки: Гавайские каникулы, Самозаванец, Веселозавр Рекс, История игрушек и ужасов!, История игрушек, забытая временем</item>
        <item>Короткометражки: *отсутствуют*</item>
    </string-array>

    <string name="ser">Ser</string>
    <string-array name="series">
        <item>Сериалы: Моана (2024)</item>
        <item>Сериалы: Русалочка: Мультсериал</item>
        <item>Сериалы: Однажды в Сказке</item>
        <item>Сериалы: София Прекрасная: Заклятие амулета, Рапунцель: Новая история</item>
        <item>Сериалы: Русалочка: Мультсериал</item>
        <item>Сериалы: Оби-Ван Кеноби, Асока, Звёздные войны: Войны клонов, Звёздные войны: Повстанцы</item>
        <item>Сериалы: Приключения Базза Лайтера из звёздной команды</item>
        <item>Сериалы: Звёздные войны: Войны клонов, Звёздные войны: Повстанцы, Звёздные войны: Дроиды</item>
        <item>Сериалы: *отсутствуют*</item>
        <item>Сериалы: *отсутствуют*</item>
    </string-array>

    <string name="enemy">Enemies</string>
    <string-array name="enemies">
        <item>Враги: Те Ка, Таматоа, Какамора</item>
        <item>Враги: Урсула: злая колдунья</item>
        <item>Враги: Ханс (раньше)</item>
        <item>Враги: *отсутствуют*</item>
        <item>Враги: Ариэль, Тритон, Себастьян, Флаундер, Эрик, Урчин, Зевс, Скаттл, Габриэлла, Злосчастье, Роксана, Гуфи</item>
        <item>Враги: Люк Скайуокер, Оби-Ван Кеноби, Феррен Барр, Ан\'я Куро, Гален Марек / Старкиллер, Асока Тано, Цере Джанда, Иит Кот, Эзра Бриджер, Кэл Кестис, Кайрак Инфайл\'а</item>
        <item>Враги: Злой император Зург</item>
        <item>Враги: *отсутствуют*</item>
        <item>Враги: Вонючка Пит, Лотсо, Габби Габби</item>
        <item>Враги: Денгар, Боба Фетт, Джабба Хатт, Первый Орден, Галактическая Империя, и другие</item>
    </string-array>

    <string name="friend">Friends</string>
    <string-array name="friends">
        <item>Друзья: Моана, другие люди</item>
        <item>Друзья: Флаундер: рыбка, Себастьян: рак-отшельник, музыкант при дворе царя Тритона</item>
        <item>Друзья: Эмма, Кристоф, Олаф</item>
        <item>Друзья: Паскаль и другие</item>
        <item>Друзья: Другие осьминоги-мутанты, Флотсам и Джетсам, Аид, Джафар, капитан Крюк, Круэлла Девиль</item>
        <item>Друзья: Дарт Сидиус</item>
        <item>Друзья: Ковбойка Джесси, Ковбой Вуди, и другие</item>
        <item>Друзья: C-3PO, Джедаи</item>
        <item>Друзья: Ковбойка Джесси, Булзай, Базз Лайтер, и другие</item>
        <item>Друзья: Чубакка, Лея Органа, Люк Скайуокер, и другие</item>
    </string-array>
</resources>